[gd_scene load_steps=3 format=2]

[ext_resource path="res://ActionButtons/ActionButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://ActionButtons/ActionButtonContainer.gd" type="Script" id=2]

[node name="ActionButtonContainer" type="Control"]
margin_right = 312.0
margin_bottom = 288.0
script = ExtResource( 2 )

[node name="StartingActionsMenu" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 68.0

[node name="Attack" type="Button" parent="StartingActionsMenu"]
margin_right = 100.0
margin_bottom = 20.0
text = "Attack"

[node name="Items" type="Button" parent="StartingActionsMenu"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
text = "Items"

[node name="AttackActions" type="VBoxContainer" parent="."]
visible = false
margin_left = 56.0
margin_right = 156.0
margin_bottom = 68.0

[node name="ActionButton" parent="AttackActions" instance=ExtResource( 1 )]
margin_right = 100.0
margin_bottom = 20.0

[node name="ActionButton2" parent="AttackActions" instance=ExtResource( 1 )]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0

[node name="ActionButton3" parent="AttackActions" instance=ExtResource( 1 )]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0

[node name="Items" type="VBoxContainer" parent="."]
visible = false
margin_left = 56.0
margin_right = 156.0
margin_bottom = 40.0

[node name="ActionButton" parent="Items" instance=ExtResource( 1 )]
margin_right = 100.0
margin_bottom = 20.0

[connection signal="pressed" from="StartingActionsMenu/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="StartingActionsMenu/Items" to="." method="_on_Items_pressed"]
